NEWS
====

0.90
	Added a new provider for freebusy over HTTP (fburl)
	Searches on CardDAV addressbooks would see their spaces "url-escaped".
	Added support for returning a pre-configurable comment to put on autocomplete records

0.81
	Check the response from the server to avoid inconsistencies and loss of data
	Take the ACL into account when changing the calendar of the edited event
	Accept local calendars

0.80
	Added support for Lightning 0.8
	CardDAV addressbooks now appear in the compose window
	Added support for DAV acls (with work-around for incomplete implementations of the WebDAV ACL)
	A bug would attempt to synchronize the vcard of the user's signature to when created or modified

0.67
	drag and dropping a card from a GroupDAV directory would not delete the card on th server
	using the German translation would prevent the groupdav addressbook dialog to appear properly
	the synchronize button would no longer be activated
	deleting cards in GroupDAV directories would delete them on the server before the confirmation window was answered
	the creation window for remote DAV addressbooks would no longer be accepted
	added handling of personal mailing lists, using a versit-style format named "VLIST"
	drag and dropping contacts from one groupdav directory to another, and back, would generate an exception and drop the card

0.66
	rewrite of the CardDAV addressbook implementation
	  fixes the situation where one was not able to write to a mailing list
	  fixes the duplicate entries for such addressbooks
	  fixes the autocompletion working only one time per two tries
	improved the performance and the reliability of the freebusy resolution in the attendees window
	added a hook to give up the startup process to the SOGo Integrator if present

0.65.1
	fixed support for freebusy entries containing multiple intervals on
	the same line

0.65
	added asynchronous autocompletion
	added the handling of organizers for whom the user id IS an email address